ghc-6.2/hslibs/win32/Win32Graphics2D_stub_ffi.h

extern void* prim_arc(HDC arg1,int arg2,int arg3,int arg4,int arg5,int arg6,int arg7,int arg8,int arg9);
extern int access_prim_arc_gc_failed(HsPtr);
extern void* access_prim_arc_gc_failstring(HsPtr);
extern void* prim_arcTo(HDC arg1,int arg2,int arg3,int arg4,int arg5,int arg6,int arg7,int arg8,int arg9);
extern int access_prim_arcTo_gc_failed(HsPtr);
extern void* access_prim_arcTo_gc_failstring(HsPtr);
extern void* prim_angleArc(HDC arg1,int arg2,int arg3,WORD arg4,double arg5,double arg6);
extern int access_prim_angleArc_gc_failed(HsPtr);
extern void* access_prim_angleArc_gc_failstring(HsPtr);
extern void* prim_chord(HDC arg1,int arg2,int arg3,int arg4,int arg5,int arg6,int arg7,int arg8,int arg9);
extern int access_prim_chord_gc_failed(HsPtr);
extern void* access_prim_chord_gc_failstring(HsPtr);
extern void* prim_pie(HDC arg1,int arg2,int arg3,int arg4,int arg5,int arg6,int arg7,int arg8,int arg9);
extern int access_prim_pie_gc_failed(HsPtr);
extern void* access_prim_pie_gc_failstring(HsPtr);
extern void* prim_bitBlt(HDC arg1,INT arg2,INT arg3,INT arg4,INT arg5,HDC arg6,INT arg7,INT arg8,unsigned int arg9);
extern int access_prim_bitBlt_gc_failed(HsPtr);
extern void* access_prim_bitBlt_gc_failstring(HsPtr);
extern void* prim_maskBlt(HDC arg1,INT arg2,INT arg3,INT arg4,INT arg5,HDC arg6,INT arg7,INT arg8,HBITMAP arg9,INT arg10,INT arg11,unsigned int arg12);
extern int access_prim_maskBlt_gc_failed(HsPtr);
extern void* access_prim_maskBlt_gc_failstring(HsPtr);
extern void* prim_stretchBlt(HDC arg1,INT arg2,INT arg3,INT arg4,INT arg5,HDC arg6,INT arg7,INT arg8,INT arg9,INT arg10,unsigned int arg11);
extern int access_prim_stretchBlt_gc_failed(HsPtr);
extern void* access_prim_stretchBlt_gc_failstring(HsPtr);
extern void* prim_plgBlt(HDC arg1,LONG gc_arg2,LONG gc_arg3,LONG gc_arg6,LONG gc_arg7,LONG gc_arg9,LONG gc_arg10,HDC arg2,INT x,INT y,INT w,INT h,HBITMAP bm,INT sx,INT sy);
extern int access_prim_plgBlt_gc_failed(HsPtr);
extern void* access_prim_plgBlt_gc_failstring(HsPtr);
extern void* prim_textOut(HDC arg1,INT arg2,INT arg3,char * arg4,int arg5);
extern int access_prim_textOut_gc_failed(HsPtr);
extern void* access_prim_textOut_gc_failstring(HsPtr);
extern void* prim_getTextExtentPoint32(HDC hdc,char * str,int l);
extern LONG access_prim_getTextExtentPoint32_gc_res1(HsPtr);
extern LONG access_prim_getTextExtentPoint32_gc_res2(HsPtr);
extern int access_prim_getTextExtentPoint32_gc_failed(HsPtr);
extern void* access_prim_getTextExtentPoint32_gc_failstring(HsPtr);